# benchmark

./: Cargo.toml
benches/: simple.rs
golang/: go.mod  go.sum  main.go
golang/graph/: schema.graphqls  schema.resolvers.go
golang/graph/model/: models_gen.go
simple/: Cargo.toml
simple/src/: lib.rs
src/: async_graphql_benchmark.rs  juniper_benchmark.rs  main.rs
