[package]
name = "graphql-benchmark"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql = { version = "2.0.0" }
async-std = { version = "1.5.0", features = ["attributes"] }
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "68210f5"}
futures = "0.3.4"
serde_json = "1.0"
lazy_static = "1.1.1"
