[package]
name = "graphql-benchmark"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql = { path = "/Users/sunli/work/async-graphql" }
#async-std = { version = "1.5.0", features = ["attributes"] }
tokio = { version = "0.2.13", features = ["full"] }
juniper = { git = "https://github.com/graphql-rust/juniper"}
futures = "0.3.4"
serde_json = "*"
json = "*"
jemallocator = "0.3.2"
mimallocator = "0.1.3"
tcmalloc = "0.3.0"
