[package]
name = "graphql-benchmark"
version = "0.1.0"
authors = ["sunli <scott_s829@163.com>"]
edition = "2018"

[dependencies]
async-graphql = { version = "1.7.4" }
async-std = { version = "1.5.0", features = ["attributes"] }
juniper = { git = "https://github.com/graphql-rust/juniper"}
futures = "0.3.4"
serde_json = "*"
json = "*"
jemallocator = "0.3.2"
mimallocator = "0.1.3"
tcmalloc = "0.3.0"
